fix(css): don't wrap tbody
Fixed broken columns in the tables.

--- a/views/default/elements/components/table.css
+++ b/views/default/elements/components/table.css
@@ -23,6 +23,10 @@
 	tr:hover th {
 		background-color: $(background-color-soft);
 	}
+	
+	tbody td {
+	       word-break: normal;
+        }
 
 	thead th {
 		font-weight: bold;
